--- a/catalog/templates/CUSTOMER_list.html
+++ b/catalog/templates/CUSTOMER_list.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'basepage.html' %}
 
 {% block title %}
     顾客列表
@@ -23,9 +23,9 @@
                 <tr >
                     <th style="text-align: center; justify-content: center;">ID</th>
                     <th style="text-align: center; justify-content: center;">顾客编号</th>
-                    <th style="text-align: center; justify-content: center;">顾客名称</th>
-                    <th style="text-align: center; justify-content: center;">顾客地址</th>
-                    <th style="text-align: center; justify-content: center;">所属国家</th>
+                    <th style="text-align: center; justify-content: center;">顾客姓名</th>
+                    <th style="text-align: center; justify-content: center;">居住地址</th>
+                    <th style="text-align: center; justify-content: center;">国家</th>
                     <th style="text-align: center; justify-content: center;">联系电话</th>
                     <th style="text-align: center; justify-content: center;">可用余额</th>
                     <th style="text-align: center; justify-content: center;">市场</th>
