--- a/catalog/templates/PART_list.html
+++ b/catalog/templates/PART_list.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'basepage.html' %}
 
 {% block title %}
     零件列表
@@ -21,9 +21,9 @@
             <table class="table table-bordered table-striped table-hover">
                 <thead>
                 <tr>
-                    <th style="text-align: center; justify-content: center;">序号</th>
-                    <th style="text-align: center; justify-content: center;">零件编号</th>
-                    <th style="text-align: center; justify-content: center;">零件名称</th>
+                    <th style="text-align: center; justify-content: center;">ID</th>
+                    <th style="text-align: center; justify-content: center;">编号</th>
+                    <th style="text-align: center; justify-content: center;">名称</th>
                     <th style="text-align: center; justify-content: center;">生产商</th>
                     <th style="text-align: center; justify-content: center;">品牌</th>
                     <th style="text-align: center; justify-content: center;">型号</th>
