--- a/catalog/templates/SUPPLIER_list.html
+++ b/catalog/templates/SUPPLIER_list.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'basepage.html' %}
 
 {% block title %}
     供应商列表
@@ -52,7 +52,7 @@
             </table>
         </div>
 
-        <div style="margin-bottom: 10px">
+        <div style="margin-bottom: 10px; font-size: larger;">
             <a class="btn btn-success" href="/SUPPLIER/add/">
                 <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
                 新建供应商
