--- a/catalog/templates/change.html
+++ b/catalog/templates/change.html
@@ -1,6 +1,6 @@
 {# 公共html模板， 用于 添加 或者 修改 页面， 文件上传除外#}
 
-{% extends 'layout.html' %}
+{% extends 'basepage.html' %}
 
 {% block title %}
     {{ title }}
